[package]
name = "ockam_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
ockam = { version = "0.83.0" }
ockam_transport_tcp = { version = "0.78.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.70" }
tracing = "0.1"
